<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:id="@+id/mapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            class = "com.google.android.gms.maps.SupportMapFragment"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="75dp"
        android:gravity="center"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    app:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip1"
                        android:text="@string/banjir"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        app:chipBackgroundColor="@color/broken_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip2"
                        android:text="@string/gempa_bumi"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        app:chipBackgroundColor="@color/broken_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip3"
                        android:text="@string/gunung_api"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        app:chipBackgroundColor="@color/broken_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip4"
                        android:text="@string/angin_kencang"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        app:chipBackgroundColor="@color/broken_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip5"
                        android:text="@string/kabut_asap"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        app:chipBackgroundColor="@color/broken_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip6"
                        android:text="@string/kebakaran_hutan"
                        style="@style/Widget.MaterialComponents.Chip.Filter"
                        app:chipBackgroundColor="@color/broken_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </HorizontalScrollView>

    </FrameLayout>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:hint="@string/cari_di_sini"
        android:layout_gravity="center|top"
        android:layout_marginTop="30dp"
        />

    <FrameLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@drawable/rounded">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_remove_24"
            android:scaleType="centerCrop"
            android:layout_gravity="center|top">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_disaster_report"/>

        </LinearLayout>


    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>